Continued the app implementation