@@ -3,6 +3,7 @@ package it.unibo.adozione_animali.model.impl;
 import it.unibo.adozione_animali.model.api.Task;
 import nu.studer.sample.Routines;
 import nu.studer.sample.Tables;
+import nu.studer.sample.tables.records.PersonaleRecord;
 import org.jooq.DSLContext;
 import org.jooq.impl.DSL;
 
@@ -20,25 +21,47 @@ public class TaskDAO implements Task {
 
     @Override
     public void insertTask(final String CF, final byte numeroTurno, final LocalDate dataTask, final String lavoro,
-                           final Optional<List<List<String>>> animali) {
+                           final Optional<List<String>> animali) {
         /*TODO--> prima di fare l'inserimento controllo se la lista di animali data ha size <= 10 se sì prendo
             il primo per creare la task e poi faccio un for per creare gestione --> tutto ciò
             va fatto se la lista non è null e il tipo lavoro deve essere trattamento_medico o accudimento
          */
         try (Connection conn = DBConfig.getConnection()) {
             DSLContext create = DSL.using(conn);
-            if (lavoro.equalsIgnoreCase("trattamento_medico")
-                    || lavoro.equalsIgnoreCase("accudimento")) {
-                if (animali.isPresent() && animali.get().size() <= 10) {
-                    final List<String> animale = animali.get().getFirst();
-                    Routines.inserimentoTask(create.configuration(), CF, numeroTurno, dataTask, lavoro,
-                            animale.get(0), animale.get(1), Integer.parseInt(animale.get(2)), animale.get(3));
+            PersonaleRecord personale = create.selectFrom(Tables.PERSONALE)
+                    .where(Tables.PERSONALE.CF.eq(CF))
+                    .fetchOne();
+            if (personale != null) {
+                String lavoroFin = lavoro.trim().replace(" ", "_");
+                if (lavoroFin.equalsIgnoreCase("trattamento_medico")
+                        || lavoro.equalsIgnoreCase("accudimento")) {
+                    if (animali.isPresent() && animali.get().size() <= 10) {
+                        List<String> animals = animali.get();
+                        Routines.inserimentoTask(create.configuration(), CF, numeroTurno, dataTask, lavoroFin,
+                                personale.getCodProvincia(), personale.getCodCitta_(), personale.getNumero(),
+                                animals.getFirst());
+                        animals.removeFirst();
+                        animals.forEach(animal ->
+                                create.insertInto(Tables.GESTIONE)
+                                        .set(Tables.GESTIONE.COD_PROVINCIA, personale.getCodProvincia())
+                                        .set(Tables.GESTIONE.COD_CITTA_, personale.getCodCitta_())
+                                        .set(Tables.GESTIONE.NUMERO_IND, personale.getNumero())
+                                        .set(Tables.GESTIONE.COD_ANIMALE, animal.trim())
+                                        .set(Tables.GESTIONE.NUMERO, numeroTurno)
+                                        .set(Tables.GESTIONE.DATA_TASK, dataTask)
+                                        .set(Tables.GESTIONE.CF, CF)
+                                        .execute());
+                    } else {
+                        this.logger.severe("Non sono stati inseriti gli animali o il loro numero è superiore a 10");
+                        throw new SQLException();
+                    }
                 } else {
-                    this.logger.severe("Non sono stati inseriti gli animali o il loro numero è superiore a 10");
+                    Routines.inserimentoTask(create.configuration(), CF, numeroTurno, dataTask, lavoro,
+                            null, null, null, null);
                 }
             } else {
-                Routines.inserimentoTask(create.configuration(), CF, numeroTurno, dataTask, lavoro,
-                        null, null, null, null);
+                this.logger.severe("Non esiste il CF inserito fra quelli dei lavoratori");
+                throw new SQLException();
             }
         } catch (SQLException e) {
             this.logger.severe("La connessione non ha funzionato");
